# book-search

./: .gitignore  CMakeLists.txt  Makefile  README.md  configure.sh
.github/workflows/: standalone.yml  ubuntu.yml
all/: CMakeLists.txt
include/: hash.h  hashtable.h  heap.h  inverted_index.h  linkedlist.h  stack.h  vector.h
include/booksearch/: HashTable.h  InvertedIndex.h  LinkedList.h  Stopwords.h  TextCleaner.h  Trie.h  Vector.h  btree.h  hash.h  hashtable.h  heap.h  inverted_index.h  stack.h  stopwords.h  text_cleaner.h  tree.h  trie.h  vector.h
scripts/: dataset_config.ipynb  generate_dataset.py
source/: InvertedIndex.cpp  Stopwords.cpp  TextCleaner.cpp  Trie.cpp  utils.cpp
src/: inverted_index.h  linkedlist.cpp  linkedlist.h  logging.h  main.cpp  settings.h  stack.cpp  stack.h  tree.cpp  tree.h
standalone/: CMakeLists.txt
standalone/include/: CommandLineParser.h  IndexManager.h  SearchEngine.h  Utils.h
standalone/source/: CommandLineParser.cpp  IndexManager.cpp  SearchEngine.cpp  Utils.cpp  main.cpp
test/: CMakeLists.txt
test/source/: HashTable.cpp  LinkedList.cpp  Trie.cpp  Vector.cpp
tests/: test.cpp  test_declarations.h  test_hashmap.cpp  test_hashtable.cpp  test_linkedlist.cpp  test_utils.h  test_vector.cpp
